--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
         </section>
       </main>
     </div>
-    <script type="text/javascript" src="script.js">
-
-    </script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
